<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".RestablecerPassword">


    <ImageButton
        android:id="@+id/restablecerPass_btnCerrar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/fondo_Img_Botones"
        android:contentDescription="@string/boton_cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btncerrar" />

    <ImageView
        android:id="@+id/restablecerPass_logo"
        android:layout_width="153dp"
        android:layout_height="153dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_btnCerrar"
        app:srcCompat="@drawable/logo_2" />


    <TextView
        android:id="@+id/restablecerPass_titulo"
        android:layout_width="385dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:fontFamily="@font/hauora_bold"
        android:text="@string/Restablecer_Password"
        android:textAlignment="inherit"
        android:textColor="@color/Azul_Titulos"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_logo" />

    <EditText
        android:id="@+id/restablecerPass_email"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bordes_redondos"
        android:fontFamily="@font/hauora_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/azul_textos"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_titulo" />

    <EditText
        android:id="@+id/restablecerPass_nuevo_password"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bordes_redondos"
        android:fontFamily="@font/hauora_bold"
        android:hint="@string/nuevo_password"
        android:inputType="textPassword"
        android:textColor="@color/azul_textos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_email" />

    <EditText
        android:id="@+id/restablecerPass_confirmar_password"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bordes_redondos"
        android:fontFamily="@font/hauora_bold"
        android:hint="@string/confirmar_password"
        android:inputType="textPassword"
        android:textColor="@color/azul_textos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_nuevo_password" />

    <Button
        android:id="@+id/restablecerPass_btnrestablecer"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/botones_fondo2"
        android:text="@string/restablecer"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:letterSpacing="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_confirmar_password" />

    <TextView
        android:id="@+id/crearcuenta_tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/hauora_bold"
        android:letterSpacing="0.4"
        android:text="@string/app_name"
        android:textColor="@color/Azul_Titulos"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restablecerPass_btnrestablecer"
        app:layout_constraintVertical_bias="0.94" />


</androidx.constraintlayout.widget.ConstraintLayout>