<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tituloApp" />

    <TextView
        android:id="@+id/main_tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/hauora_semibold"
        android:letterSpacing="0.4"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/main_Ingreso_Email"
        android:layout_width="425dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/bordes_redondos_fondo1"
        android:fontFamily="@font/hauora_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/main_IngresoPassword"
        android:layout_width="425dp"
        android:layout_height="48dp"
        android:fontFamily="@font/hauora_regular"
        android:background="@drawable/bordes_redondos_fondo1"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_Ingreso_Email"
        app:layout_constraintVertical_bias="0.069"
        android:autofillHints="" />

    <Button
        android:id="@+id/main_btnLogin"
        android:layout_width="425dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/boton_login"
        android:fontFamily="@font/hauora_bold"
        android:letterSpacing=".3"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olvidar_password" />

    <TextView
        android:id="@+id/olvidar_password"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/hauora_regular"
        android:text="@string/olvido_contraseña"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_IngresoPassword"
         />

    <ImageButton
        android:id="@+id/main_btnCerrar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_cerrar"
        app:layout_constraintBottom_toTopOf="@+id/main_tituloApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/btncerrar" />

    <ImageButton
        android:id="@+id/main_btnCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btnLogin"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@drawable/btncrearcuenta" />




</androidx.constraintlayout.widget.ConstraintLayout>